--- a/Application/helm/values.yaml
+++ b/Application/helm/values.yaml
@@ -2,8 +2,8 @@ ReplicaNumber: 3
 
 containers:
   containerPort: 8080
-  image: 'quay.io/guneliya/redhatcourse>:v3'
-  tag: 'base'
+  image: 'quay.io/guneliya/redhatcourse'
+  tag: 'v3'
 
 service:
   servicePort: 8080
