--- a/Application/helm/templates/deployment.yaml
+++ b/Application/helm/templates/deployment.yaml
@@ -1,36 +1,35 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-# set your lab user name
   name: {{ .Release.Name }}
 spec:
   replicas: {{ .Values.ReplicaNumber }}
   selector:
     matchLabels:
-# set your lab user name
       app: {{ .Release.Name }}
+  template:
+    metadata:
+      labels:
+        app: {{ .Release.Name }}
     spec:
       volumes:
         - name: index-html
           configMap:
             name: index.html
-            defaultMode: 420
-# set your lab user name
-        app: {{ .Release.Name }}
-    spec:
+            defaultMode: 420    
       containers:
-        volumeMounts:
-          - name: index-html
-            mountPath: /tmp/html # this will mount the html.index file to it application location
         - resources: {}
+          volumeMounts:
+          - name: index-html
+            mountPath: /tmp/html # this will mount the html.index file to it application location        
           terminationMessagePath: /dev/termination-log
           name: {{ .Release.Name }}
           ports:
             - containerPort: {{ .Values.containers.containerPort }}
               protocol: TCP
-          imagePullPolicy: IfNotPresent
-# update with the image you build in part 1
-          image:  {{ .Values.containers.image }}:{{ .Values.containers.tag }}
+          imagePullPolicy: Always
+          terminationMessagePolicy: File
+          image: {{ .Values.containers.image }}:{{ .Values.containers.tag }}
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
   strategy:
